# DDD-Exp

./: .gitignore  .gitmodules  LICENSE  README.md
1_MotorControl/src/: GPIOInputMgr.h  GPIOObserver.cpp  main.cpp
2_SpeedMeter/: CMakeLists.txt
2_SpeedMeter/src/: CMakeLists.txt  MotorMgr.cpp  main.cpp
3_PID/data/: Test1.4Rad Per Sec.csv  Test3.8Rad Per Sec.csv  Test3.8Rad Per Sec.xlsm
3_PID/src/: CMakeLists.txt  GPIOInputMgr.cpp  MotorPID.cpp  MotorPID.h  main.cpp
4_ROS2/firmware/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake
4_ROS2/firmware/port/FreeRTOS-Kernel/: IdleMemory.c  cppMemory.cpp  freertos_config.cmake
4_ROS2/firmware/src/: BlinkAgent.cpp  CMakeLists.txt  GPIOObserver.h  MotorPID.cpp  MotorsAgent.cpp  freertos_allocators.c  main.cpp  uRosBridge.cpp  uRosEntities.cpp
5_TWIST/firmware/: CMakeLists.txt  eigen_import.cmake  micro_ros.cmake
5_TWIST/firmware/port/FreeRTOS-Kernel/: FreeRTOSConfig.h
5_TWIST/firmware/src/: Agent.cpp  Agent.h  BlinkAgent.h  CMakeLists.txt  DDD.cpp  DDD.h  MotorMgr.cpp  MotorMgr.h  freertos_allocators.h  main.cpp  uRosEntities.h
6_HCSR04/firmware/: CMakeLists.txt  distance_sensor.cmake
6_HCSR04/firmware/src/: CMakeLists.txt  DDD.cpp  DDD.h  HCSR04Agent.cpp  HCSR04Agent.h  MotorPID.h  MotorsAgent.h  PWMManager.cpp  PWMManager.h  PubEntities.cpp  PubEntities.h  main.cpp  pico_usb_transport.c  pico_usb_transports.h  uRosBridge.h
6_HCSR04/ros2_ws/src/droid1/: CMakeLists.txt  package.xml
6_HCSR04/ros2_ws/src/droid1/launch/: dispOnly.launch.py  display.launch.py
6_HCSR04/ros2_ws/src/droid1/rviz/: urdf.rviz
6_HCSR04/ros2_ws/src/droid1/urdf/: ddd.urdf
